--- a/src/HTML/Index.html
+++ b/src/HTML/Index.html
@@ -26,7 +26,7 @@
         
         <div class="content">
             <h1>Let's find your car!</h1>
-            <a href="#">Search</a>
+            <a href="/src/HTML/Search.html">Search</a>
         </div>
 
         
