--- a/src/HTML/Index.html
+++ b/src/HTML/Index.html
@@ -16,7 +16,7 @@
         </video>
 
         <nav class="nav">
-            <p class="logo">Cars Web Page</p>
+            <a class="logo" href="/src/HTML/Index.html">Cars Web Page</a>
             <ul>
                 <li><a href="/src/HTML/Search.html">Search</a></li> 
                 <li><a href="#">Brands</a></li> 
