--- a/src/HTML/Search.html
+++ b/src/HTML/Search.html
@@ -10,7 +10,7 @@
 <body>
 
     <nav class="nav">
-        <p class="logo">Cars Web Page</p>
+        <a class="logo" href="/src/HTML/Index.html">Cars Web Page</a>
         <ul>
             <li><a href="/src/HTML/Search.html">Search</a></li> 
             <li><a href="#">Brands</a></li> 
@@ -22,9 +22,9 @@
         <img src="/images/pexels-denys-gromov-4635344.jpg" alt="cars">
     </div>
     
-    <div class="Search-title">
+    <!-- <div class="Search-title">
         <H1>Fill in the following: </H1>
-    </div>
+    </div> -->
 
     <div class="search-container"> 
         <div class="card-content">
