--- a/src/HTML/Index.html
+++ b/src/HTML/Index.html
@@ -25,7 +25,7 @@
         </nav>
         
         <div class="content">
-            <h1>Let's find your car!</h1>
+            <h1>Let's check the Super Cars</h1>
             <a href="/src/HTML/Search.html">Search</a>
         </div>
 
