--- a/src/HTML/Search.html
+++ b/src/HTML/Search.html
@@ -12,35 +12,35 @@
         <nav class="nav">
             <a class="logo" href="/src/HTML/Index.html">Cars Web Page</a>
             <ul>
-                <li><a href="/src/HTML/Search.html">Search</a></li> 
+                <li><a href="/src/HTML/Index.html">Home</a></li> 
                 <li><a href="#">Brands</a></li> 
                 <li><a href="#">Contact Us</a></li>
             </ul>
         </nav>
         <div class="card-content"> 
-            <select id="Select Make" class="selectInput" name="selectedMakeId" aria-label="Select Make">
-                <option value="m4" data-cg-ft="car-picker-dialog-select-acura">Acura</option>
-                <option value="m271" data-cg-ft="car-picker-dialog-select-astonmartin">Aston Martin</option>
-                <option value="m19" data-cg-ft="car-picker-dialog-select-audi">Audi</option>
-                <option value="m3" data-cg-ft="car-picker-dialog-select-bmw">BMW</option>
-                <option value="m271" data-cg-ft="car-picker-dialog-select-bugatti">Bugatti</option>
-                <option value="m2"  data-cg-ft="car-picker-dialog-select-chevrolet">Chevrolet</option>
-                <option value="m21"  data-cg-ft="car-picker-dialog-select-dodge">Dodge</option>
-                <option value="m271" data-cg-ft="car-picker-dialog-select-ferrari">Ferrari</option>
-                <option value="m98" data-cg-ft="car-picker-dialog-select-ford">Ford</option>
-                <option value="m203" data-cg-ft="car-picker-dialog-select-honda">Honda</option>
-                <option value="m31" data-cg-ft="car-picker-dialog-select-jaguar">Jaguar</option>
-                <option value="m271" data-cg-ft="car-picker-dialog-select-Lamborghini">Lamborghini</option>
-                <option value="m32" data-cg-ft="car-picker-dialog-select-lexus">Lexus</option>
-                <option value="m38" data-cg-ft="car-picker-dialog-select-maserati">Maserati</option>
-                <option value="m271" data-cg-ft="car-picker-dialog-select-mclaren">McLaren</option>
-                <option value="m42" data-cg-ft="car-picker-dialog-select-mercedes-benz">Mercedes-Benz</option>
-                <option value="m12" data-cg-ft="car-picker-dialog-select-nissan">Nissan</option>
-                <option value="m48" data-cg-ft="car-picker-dialog-select-pagani">Pagani</option>
-                <option value="m48" data-cg-ft="car-picker-dialog-select-porsche">Porsche</option>
-                <option value="m112" data-cg-ft="car-picker-dialog-select-tesla">Tesla</option>
-                <option value="m7" data-cg-ft="car-picker-dialog-select-toyota">Toyota</option>
-                <option value="m7" data-cg-ft="car-picker-dialog-select-koenigsegg">Koenigsegg</option>         
+            <select id="Select Make" class="selectInput" name="selectedMakeId" >
+                <option value="1">Acura</option>
+                <option value="2">Aston Martin</option>
+                <option value="3">Audi</option>
+                <option value="4">BMW</option>
+                <option value="5">Bugatti</option>
+                <option value="6">Chevrolet</option>
+                <option value="7">Dodge</option>
+                <option value="8">Ferrari</option>
+                <option value="9">Ford</option>
+                <option value="10">Honda</option>
+                <option value="11">Jaguar</option>
+                <option value="12">Lamborghini</option>
+                <option value="13">Lexus</option>
+                <option value="14">Maserati</option>
+                <option value="15">McLaren</option>
+                <option value="16">Mercedes-Benz</option>
+                <option value="16">Nissan</option>
+                <option value="18">Pagani</option>
+                <option value="19">Porsche</option>
+                <option value="20">Tesla</option>
+                <option value="21">Toyota</option>
+                <option value="22">Koenigsegg</option>         
             </select>
         
             <select id="Select Model" class="selectInput" disabled="" name="selectedModelId"        aria-label="Select Model" data-cg-ft="search-model-picker">
