Brands page initialized

--- a/src/HTML/Search.html
+++ b/src/HTML/Search.html
@@ -13,7 +13,7 @@
             <a class="logo" href="/src/HTML/Index.html">Cars Web Page</a>
             <ul>
                 <li><a href="/src/HTML/Index.html">Home</a></li> 
-                <li><a href="#">Brands</a></li> 
+                <li><a href="/src/HTML/Brands.html">Brands</a></li> 
                 <li><a href="#">Contact Us</a></li>
             </ul>
         </nav>
@@ -22,7 +22,7 @@
             
             <div class="select-container">
                 <p class="make-text">Make: </p>
-                <select id="Select Make" class="selectInput" name="selectedMakeId" >
+                <select id="SelectMake" class="selectInput" name="selectedMakeId" >
                     <option value="1">Acura</option>
                     <option value="2">Aston Martin</option>
                     <option value="3">Audi</option>
