--- a/src/HTML/Brands.html
+++ b/src/HTML/Brands.html
@@ -12,7 +12,7 @@
         <a class="logo" href="/src/HTML/Index.html">Cars Web Page</a>
         <ul>
             <li><a href="/src/HTML/Index.html">Home</a></li> 
-            <li><a href="#">Brands</a></li> 
+            <li><a href="/src/HTML/Search.html">Search</a></li> 
             <li><a href="#">Contact Us</a></li>
         </ul>
     </nav>
@@ -20,6 +20,135 @@
         <h1>Super Car Brands</h1>
         <div class="container">
             <div class="card-content"> 
+                <div>
+                    <a href="#">
+                        <img id="carLogo" src="/images/logos/Acura-Logo.png" alt="Acura">
+                        <p> Acura is the luxury and performance division of Japanese automaker Honda, based primarily in North America. 
+                        </p>
+                    </a>
+                </div>
+
+                <div>
+                    <a href="#">
+                        <img id="carLogo" src="/images/logos/Aston-Martin-Logo.png" alt="AstonMartin">
+                        <p>Aston Martin is an English manufacturer of luxury sports cars and grand tourers.</p>
+                    </a>
+                </div>
+
+                <div>
+                    <a href="#">
+                        <img id="carLogo" src="/images/logos/audi-logo.png" alt="Audi">
+                        <p>Audi is a German automotive manufacturer of luxury vehicles headquartered in Ingolstadt, Bavaria, Germany.</p>
+                    </a>
+                </div>
+
+                <div>
+                    <a href="#">
+                        <img id="carLogo" src="/images/logos/Bugatti_logo.png" alt="Bugatti">
+                        <p>Bugatti is a German then French manufacturer of high-performance automobiles</p>
+                    </a>
+                </div>
+
+                <div>
+                    <a href="#">
+                        <img id="carLogo" src="/images/logos/Chevrolet-Logo.png" alt="Chevrolet">
+                        <p>Chevrolet is an American automobile division of the American manufacturer General Motors.</p>
+                    </a>
+                </div>
+
+                <div>
+                    <a href="#">
+                        <img id="carLogo" src="/images/logos/Dodge-Logo.png" alt="Dodge">
+                        <p>Dodge is an American brand of automobiles and a division of Stellantis, based in Auburn Hills, Michigan. Dodge vehicles have historically included performance cars.</p>
+                    </a>
+                </div>
+
+                <div>
+                    <a href="#">
+                        <img id="carLogo" src="/images/logos/Ferrari-Logo.png" alt="Ferrari">
+                        <p>Ferrari S.p.A. is an Italian luxury sports car manufacturer based in Maranello, Italy.</p>
+                    </a>
+                </div>
+
+                <div>
+                    <a href="#">
+                        <img id="carLogo" src="/images/logos/Ford-Logo-500x281.png" alt="Ford">
+                        <p>Ford Motor Company is an American multinational automobile manufacturer headquartered in Dearborn, Michigan, United States.</p>
+                    </a>
+                </div>
+
+                <div>
+                    <a href="#">
+                        <img id="carLogo" src="/images/logos/Jaguar-Logo.png" alt="Jaguar">
+                        <p>Jaguar is the luxury vehicle brand of Jaguar Land Rover, a British multinational car manufacturer with its headquarters in Whitley, Coventry, England.</p>
+                    </a>
+                </div>
+
+                <div>
+                    <a href="#">
+                        <img id="carLogo" src="/images/logos/Koenigsegg-Logo.jpg" alt="Koenigsegg">
+                        <p>Koenigsegg Automotive AB is a Swedish manufacturer of high-performance sports cars based in Ängelholm, Skåne County, Sweden.</p>
+                    </a>
+                </div>
+
+                <div>
+                    <a href="#">
+                        <img id="carLogo" src="/images/logos/Lamborghini-Logo.png" alt="Lamborghini">
+                        <p>Lamborghini S.p.A. is an Italian manufacturer of luxury sports cars and SUVs based in Sant'Agata Bolognese.</p>
+                    </a>
+                </div>
+
+                <div>
+                    <a href="#">
+                        <img id="carLogo" src="/images/logos/Lexus-Log0.png" alt="Lexus">
+                        <p>Lexus is the luxury vehicle division of the Japanese automaker Toyota.</p>
+                    </a>
+                </div>
+
+                <div>
+                    <a href="#">
+                        <img id="carLogo" src="/images/logos/Maserati-Logo.png" alt="Maserati">
+                        <p>Maserati S.p.A. is an Italian luxury vehicle manufacturer. Established on 1 December 1914, in Bologna, Italy, the company's headquarters are now in Modena, and its emblem is a trident.</p>
+                    </a>
+                </div>
+
+                <div>
+                    <a href="#">
+                        <img id="carLogo" src="/images/logos/McLaren-Logo.png" alt="McLaren">
+                        <p>McLaren Automotive is a British luxury automotive manufacturer based at the McLaren Technology Centre in Woking, England.</p>
+                    </a>
+                </div>
+
+                <div>
+                    <a href="#">
+                        <img id="carLogo" src="/images/logos/Mercedes-Benz-Logo.png" alt="Mercedes-Benz">
+                        <p>Mercedes-Benz, commonly referred to as Mercedes and sometimes as Benz, is a German luxury and commercial vehicle automotive brand established in 1926.</p>
+                    </a>
+                </div>
+
+                <div>
+                    <a href="#">
+                        <img id="carLogo" src="/images/logos/Nissan-Logo.png" alt="Nissan">
+                        <p>Nissan Motor Co., Ltd., trading as Nissan Motor Corporation and often shortened to Nissan, is a Japanese multinational automobile manufacturer headquartered in Nishi-ku, Yokohama, Japan.</p>
+                    </a>
+                </div>
+
+                <div>
+                    <a href="#">
+                        <img id="carLogo" src="/images/logos/Pagani-Logo.png" alt="Pagani">
+                        <p>Pagani Automobili S.p.A. is an Italian manufacturer of hypercars and carbon fiber components. The company was founded in 1992 by the Argentine Horacio Pagani and is based in San Cesario sul Panaro, near Modena, Italy.</p>
+                    </a>
+                </div>
+
+                <div>
+                    <a href="#">
+                        <img id="carLogo" src="/images/logos/Porsche-Logo.png" alt="Porsche">
+                        <p>Porsche AG, usually shortened to Porsche, is a German automobile manufacturer specializing in high-performance sports cars, SUVs and sedans, headquartered in Stuttgart, Baden-Württemberg, Germany.</p>
+                    </a>
+                </div>
+
+
+
                 
     
             </div>
