JS added for Search

--- a/src/HTML/Index.html
+++ b/src/HTML/Index.html
@@ -18,15 +18,15 @@
         <nav class="nav">
             <a class="logo" href="/src/HTML/Index.html">Cars Web Page</a>
             <ul>
-                <li><a href="/src/HTML/Search.html">Search</a></li> 
-                <li><a href="#">Brands</a></li> 
+                <li><a href="/src/HTML/demo.html">Search</a></li> 
+                <li><a href="/src/HTML/Brands.html">Brands</a></li> 
                 <li><a href="#">Contact Us</a></li>
             </ul>
         </nav>
         
         <div class="content">
             <h1>Let's check Super Cars</h1>
-            <a href="/src/HTML/Search.html">Search</a>
+            <a href="/src/HTML/demo.html">Search</a>
         </div>
 
         
