--- a/src/HTML/Brands.html
+++ b/src/HTML/Brands.html
@@ -12,7 +12,7 @@
         <a class="logo" href="/src/HTML/Index.html">Cars Web Page</a>
         <ul>
             <li><a href="/src/HTML/Index.html">Home</a></li> 
-            <li><a href="/src/HTML/Search.html">Search</a></li> 
+            <li><a href="/src/HTML/demo.html">Search</a></li> 
             <li><a href="#">Contact Us</a></li>
         </ul>
     </nav>
