--- a/src/HTML/Index.html
+++ b/src/HTML/Index.html
@@ -20,7 +20,7 @@
             <ul>
                 <li><a href="/src/HTML/demo.html">Search</a></li> 
                 <li><a href="/src/HTML/Brands.html">Brands</a></li> 
-                <li><a href="#">Contact Us</a></li>
+                <li><a href="/src/HTML/ContactUs.html">Contact Us</a></li>
             </ul>
         </nav>
         
