--- a/src/HTML/demo.html
+++ b/src/HTML/demo.html
@@ -14,7 +14,7 @@
             <ul>
                 <li><a href="/src/HTML/Index.html">Home</a></li> 
                 <li><a href="/src/HTML/Brands.html">Brands</a></li> 
-                <li><a href="#">Contact Us</a></li>
+                <li><a href="/src/HTML/ContactUs.html">Contact Us</a></li>
             </ul>
         </nav>
         <div class="card-content"> 
@@ -30,25 +30,14 @@
                     <select name="" id="year">
                         <option value=""> Select Year </option>
                     </select>
-                    <!-- <select name="" id="zip">
-                        <option value="">-- Select Zip --</option>
-                    </select> -->
                 </form>
-                <p id="searchBot"> Search </p>
+                <a href="#" id="searchBot"> Search </a>
             </div>
-
         </div>
-        
         <video autoplay loop muted plays-inline class="myVideo">
             <source src="/images/pexels-taryn-elliott-5309353.mp4" type="video/mp4">
         </video>
-
-
-
-         
-   
     </div>
-
     <script src="/src/Scripts/demo.js"></script>
 </body>
 </html>
