--- a/src/HTML/Brands.html
+++ b/src/HTML/Brands.html
@@ -13,7 +13,7 @@
         <ul>
             <li><a href="/src/HTML/Index.html">Home</a></li> 
             <li><a href="/src/HTML/demo.html">Search</a></li> 
-            <li><a href="#">Contact Us</a></li>
+            <li><a href="/src/HTML/ContactUs.html">Contact Us</a></li>
         </ul>
     </nav>
     <div class="content">
