--- a/src/HTML/Search.html
+++ b/src/HTML/Search.html
@@ -14,7 +14,7 @@
             <ul>
                 <li><a href="/src/HTML/Index.html">Home</a></li> 
                 <li><a href="/src/HTML/Brands.html">Brands</a></li> 
-                <li><a href="#">Contact Us</a></li>
+                <li><a href="/src/HTML/ContactUs.html">Contact Us</a></li>
             </ul>
         </nav>
         <div class="card-content"> 
